--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Darragh Ferry</h1>
-							<p class="major">I'm a Full Stack Web Developer (in the making) studying at Lambda School.</p>
+							<p class="major">I'm a Full Stack Web Developer (in the making) from Donegal currently studying at Lambda School.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">View Projects</a></li>
 							</ul>
@@ -48,28 +48,28 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Flex Box Site</h2>
+							<p>In this project I demonstrated my understanding of the flex-box model by manipulating the layout of the page using <strong>display: flex</strong>.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://github.com/Darragh1996/UI-III-Flexbox" class="button">View Code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/flex-box-site.jpg" alt="Image of Flex Box Site" />
 						</div>
 					</section>
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Responsive Web Page Design</h2>
+							<p>This project is a good showcase of my understanding of how to use media queries to make for a better more responsive user experience</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/mobile-view.png" alt="" />
 						</div>
 					</section>
 
