--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -65,11 +65,11 @@
 							<h2>Responsive Web Page Design</h2>
 							<p>This project is a good showcase of my understanding of how to use media queries to make for a better more responsive user experience</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://github.com/Darragh1996/responsive-web-design-I" class="button">View Code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/mobile-view.png" alt="" />
+							<img src="images/mobile-view.png" alt="mobile view of web page project" />
 						</div>
 					</section>
 
@@ -83,7 +83,7 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img1.png" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -95,7 +95,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img2.jpg" class="image">
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -107,7 +107,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img3.jpeg" class="image">
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -119,7 +119,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img4.jpg" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -131,7 +131,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img5.jpeg" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -143,7 +143,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img6.jpg" class="image">
 										<img src="images/gallery/thumbs/06.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -155,7 +155,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img7.jpg" class="image">
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -167,7 +167,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/gallery/fulls/coding-img8.jpg" class="image">
 										<img src="images/gallery/thumbs/08.jpg" alt="" />
 									</a>
 									<div class="caption">
