added some thumbnail images to gallery section

--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -84,7 +84,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/coding-img1.png" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img1-thumb.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Ipsum Dolor</h3>
@@ -96,7 +96,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img2.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img2-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Feugiat Lorem</h3>
@@ -108,7 +108,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img3.jpeg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img3-thumb.jpeg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Magna Amet</h3>
@@ -120,7 +120,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img4.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img4-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Sed Tempus</h3>
@@ -132,7 +132,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img5.jpeg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img5-thumb.jpeg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Ultrices Magna</h3>
@@ -144,7 +144,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img6.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img6-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Sed Tempus</h3>
@@ -156,7 +156,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img7.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img7-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Ipsum Lorem</h3>
@@ -168,7 +168,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/coding-img8.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
+										<img src="images/gallery/thumbs/coding-img8-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Magna Risus</h3>
